refactor and set proper rpath

--- a/Core/CMakeLists.txt
+++ b/Core/CMakeLists.txt
@@ -1,7 +1,6 @@
 add_library(TinyEmbreeCore SHARED)
 
 find_package(embree 3.0 CONFIG REQUIRED)
-find_package(TBB CONFIG REQUIRED)
 
 if (WIN32)
     add_compile_definitions(TINY_EMBREE_DLL TINY_EMBREE_EXPORTS)
@@ -20,13 +19,25 @@ target_sources(TinyEmbreeCore
         "scene.cpp"
 )
 
-target_link_libraries(TinyEmbreeCore PRIVATE embree TBB::tbb)
+# libtbb and libembree are located in the same folder
+IF(WIN32)
+ELSEIF(APPLE)
+  SET_TARGET_PROPERTIES(TinyEmbreeCore PROPERTIES INSTALL_RPATH "@rpath")
+ELSE()
+  SET_TARGET_PROPERTIES(TinyEmbreeCore PROPERTIES INSTALL_RPATH "$ORIGIN")
+ENDIF()
+
+target_link_libraries(TinyEmbreeCore PRIVATE embree)
+
 set_target_properties(TinyEmbreeCore PROPERTIES
-                      RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/../Dist
-                      RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/../Dist
-                      RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_CURRENT_SOURCE_DIR}/../Dist
-                      LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/../Dist
-                      LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/../Dist
-                      LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_CURRENT_SOURCE_DIR}/../Dist
+                      RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/../Runtime
+                      RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/../Runtime
+                      RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_CURRENT_SOURCE_DIR}/../Runtime
+                      LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/../Runtime
+                      LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/../Runtime
+                      LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_CURRENT_SOURCE_DIR}/../Runtime
 )
 
+install(TARGETS TinyEmbreeCore
+    DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../Runtime
+)
