--- a/TinyEmbree/TinyEmbree.csproj
+++ b/TinyEmbree/TinyEmbree.csproj
@@ -4,7 +4,7 @@
     <Title>TinyEmbree</Title>
     <Description>A very simple C# wrapper around the Embree ray tracing kernels.</Description>
     <PackageId>TinyEmbree</PackageId>
-    <Version>0.1.1</Version>
+    <Version>0.1.2</Version>
     <Copyright>(c) Pascal Grittmann</Copyright>
     <RepositoryUrl>https://github.com/pgrit/TinyEmbree</RepositoryUrl>
 
@@ -72,6 +72,7 @@
 
   <ItemGroup>
     <None Include="../LICENSE" Pack="true" PackagePath=""/>
+    <None Include="../THIRDPARTIES.txt" Pack="true" PackagePath=""/>
     <None Include="../README.md" Pack="true" PackagePath=""/>
   </ItemGroup>
 
