test simplified build

--- a/Core/CMakeLists.txt
+++ b/Core/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_library(TinyEmbreeCore SHARED)
 
-find_package(embree 3.0 CONFIG REQUIRED)
+# find_package(embree 3.0 CONFIG REQUIRED)
 
 if (WIN32)
     add_compile_definitions(TINY_EMBREE_DLL TINY_EMBREE_EXPORTS)
@@ -20,23 +20,14 @@ target_sources(TinyEmbreeCore
 )
 
 # libtbb and libembree are located in the same folder
-IF(WIN32)
-ELSEIF(APPLE)
-  SET_TARGET_PROPERTIES(TinyEmbreeCore PROPERTIES INSTALL_RPATH "@rpath")
-ELSE()
-  SET_TARGET_PROPERTIES(TinyEmbreeCore PROPERTIES INSTALL_RPATH "$ORIGIN")
-ENDIF()
+# IF(WIN32)
+# ELSEIF(APPLE)
+#   SET_TARGET_PROPERTIES(TinyEmbreeCore PROPERTIES INSTALL_RPATH "@rpath")
+# ELSE()
+#   SET_TARGET_PROPERTIES(TinyEmbreeCore PROPERTIES INSTALL_RPATH "$ORIGIN")
+# ENDIF()
 
 target_link_libraries(TinyEmbreeCore PRIVATE embree)
-
-set_target_properties(TinyEmbreeCore PROPERTIES
-                      RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/../Runtime
-                      RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/../Runtime
-                      RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_CURRENT_SOURCE_DIR}/../Runtime
-                      LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/../Runtime
-                      LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/../Runtime
-                      LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_CURRENT_SOURCE_DIR}/../Runtime
-)
 
 set_target_properties(TinyEmbreeCore
     PROPERTIES
@@ -46,5 +37,5 @@ set_target_properties(TinyEmbreeCore
 )
 
 install(TARGETS TinyEmbreeCore
-    DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../Runtime
+    DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../Runtimes
 )
