--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+      with:
+        submodules: recursive
+        
     - name: Setup .NET Core SDK
       uses: actions/setup-dotnet@v1.7.2
       with:
