more cmake magic

--- a/External/CMakeLists.txt
+++ b/External/CMakeLists.txt
@@ -8,8 +8,8 @@ set(EMBREE_GEOMETRY_GRID          OFF CACHE BOOL " " FORCE)
 set(EMBREE_GEOMETRY_SUBDIVISION   OFF CACHE BOOL " " FORCE)
 set(EMBREE_GEOMETRY_INSTANCE      OFF CACHE BOOL " " FORCE)
 set(EMBREE_GEOMETRY_USER          OFF CACHE BOOL " " FORCE)
-set(EMBREE_TASKING_SYSTEM         INTERNAL CACHE STRING " " FORCE)
+set(EMBREE_TASKING_SYSTEM         "INTERNAL" CACHE STRING " " FORCE)
 set(EMBREE_STATIC_LIB             ON  CACHE BOOL " " FORCE)
-set(EMBREE_MAX_ISA                NONE CACHE STRING " " FORCE)
+set(EMBREE_MAX_ISA                "NONE" CACHE STRING " " FORCE)
 set(EMBREE_ISA_AVX2               ON  CACHE BOOL " " FORCE)
 add_subdirectory(embree)
