--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,13 +7,13 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest] #, windows-latest, macos-latest]
 
     steps:
     - uses: actions/checkout@v2
       with:
         submodules: recursive
-        
+
     - name: Setup .NET Core SDK
       uses: actions/setup-dotnet@v1.7.2
       with:
