--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ macos-latest, ubuntu-latest, windows-latest]
+        os: [ macos-latest ] #, ubuntu-latest, windows-latest]
 
     steps:
     - uses: actions/checkout@v2
@@ -30,9 +30,9 @@ jobs:
       working-directory: ${{github.workspace}}/build
       run: cmake --build . --config Release
 
-    - name: Install
-      working-directory: ${{github.workspace}}/build
-      run: cmake --install .
+    # - name: Install
+    #   working-directory: ${{github.workspace}}/build
+    #   run: cmake --install .
 
     # fixes sporadic build fails on Windows (https://github.com/actions/setup-dotnet/issues/155)
     - name: Clean
