cmake magic part 5000

--- a/Core/CMakeLists.txt
+++ b/Core/CMakeLists.txt
@@ -20,12 +20,15 @@ target_sources(TinyEmbreeCore
 )
 
 # The embree shared library will be in the same folder
-IF(WIN32)
-ELSEIF(APPLE)
-  SET_TARGET_PROPERTIES(TinyEmbreeCore PROPERTIES BUILD_RPATH "@rpath")
-ELSE()
-  SET_TARGET_PROPERTIES(TinyEmbreeCore PROPERTIES INSTALL_RPATH "$ORIGIN")
-ENDIF()
+if(WIN32)
+elseif(APPLE)
+    set(CMAKE_MACOSX_RPATH ON)
+    set(CMAKE_BUILD_RPATH "@rpath")
+else()
+    set(CMAKE_BUILD_RPATH "$ORIGIN")
+endif()
+
+message(${CMAKE_BUILD_RPATH})
 
 target_link_libraries(TinyEmbreeCore PRIVATE embree)
 
