--- a/Core/CMakeLists.txt
+++ b/Core/CMakeLists.txt
@@ -25,7 +25,7 @@ elseif(APPLE)
     set_target_properties(TinyEmbreeCore
         PROPERTIES
             # INSTALL_RPATH "@rpath"
-            INSTALL_RPATH "@executable_path"
+            INSTALL_RPATH "@loader_path"
             MACOSX_RPATH ON
             BUILD_WITH_INSTALL_RPATH ON)
 else()
