--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,7 +44,7 @@ jobs:
 
     - name: Test
       working-directory: ${{github.workspace}}
-      run: dotnet test
+      run: DYLD_PRINT_LIBRARIES=1 dotnet test
 
   pack:
     runs-on: ubuntu-latest
