--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,7 @@ jobs:
 
     steps:
     - run: sysctl -a | grep machdep.cpu.leaf7_features
+    - run: sysctl -n machdep.cpu.brand_string
       
     - uses: actions/checkout@v2
       with:
