--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,20 +7,12 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ macos-latest ] #, ubuntu-latest, windows-latest]
+        os: [ macos-latest, ubuntu-latest, windows-latest ]
 
     steps:
-    - run: sysctl -a | grep machdep.cpu.leaf7_features
-    - run: sysctl -n machdep.cpu.brand_string
-      
     - uses: actions/checkout@v2
       with:
         submodules: recursive
-
-    - name: Setup .NET Core SDK
-      uses: actions/setup-dotnet@v1.7.2
-      with:
-        dotnet-version: '5.0.x'
 
     - name: Create Build Environment
       run: cmake -E make_directory ${{github.workspace}}/build
@@ -33,19 +25,19 @@ jobs:
       working-directory: ${{github.workspace}}/build
       run: cmake --build . --config Release
 
-    - working-directory: ${{github.workspace}}/Runtimes
-      run: otool -L libTinyEmbreeCore.dylib
-    - working-directory: ${{github.workspace}}/Runtimes
-      run: otool -L libembree3.3.dylib
-
-    # fixes sporadic build fails on Windows (https://github.com/actions/setup-dotnet/issues/155)
-    - name: Clean
-      run: dotnet clean -c Release && dotnet nuget locals all --clear
-
     - name: Upload Binaries
       uses: actions/upload-artifact@v2
       with:
         path: ${{github.workspace}}/Runtimes/*
+
+    - name: Setup .NET Core SDK
+      uses: actions/setup-dotnet@v1.7.2
+      with:
+        dotnet-version: '5.0.x'
+
+    # fixes sporadic build fails on Windows (https://github.com/actions/setup-dotnet/issues/155)
+    - name: Clean
+      run: dotnet clean -c Release && dotnet nuget locals all --clear
 
     - name: Test
       working-directory: ${{github.workspace}}
@@ -62,7 +54,6 @@ jobs:
       with:
         name: artifact
         path: ${{github.workspace}}/Runtimes
-    - run: ls -R
 
     - name: Setup .NET Core SDK
       uses: actions/setup-dotnet@v1.7.2
