--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,9 +10,9 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/TinyEmbree.Tests/bin/Debug/net5.0/TinyEmbree.Tests.dll",
+            "program": "${workspaceFolder}/Benchmark/bin/Debug/net5.0/Benchmark.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/TinyEmbree.Tests",
+            "cwd": "${workspaceFolder}/Benchmark",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
             "console": "internalConsole",
             "stopAtEntry": false
