--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,14 @@ jobs:
       with:
         submodules: recursive
 
+    - uses: actions/cache@v2
+      id: cache
+      with:
+        path: ${{github.workspace}}/build
+        key: ${{ runner.os }}-build
+        
     - name: Create Build Environment
+      if: steps.cache.outputs.cache-hit != 'true'
       run: cmake -E make_directory ${{github.workspace}}/build
 
     - name: Configure CMake
