insignificant performance optimization ;)

--- a/Core/CMakeLists.txt
+++ b/Core/CMakeLists.txt
@@ -48,3 +48,14 @@ add_custom_command(
     COMMAND ${CMAKE_COMMAND} -E copy
         $<TARGET_FILE:TinyEmbreeCore>
         ${CMAKE_CURRENT_SOURCE_DIR}/../Runtimes/ )
+
+# Test / benchmark target
+add_executable(TinyBench)
+target_sources(TinyBench PRIVATE cbench.cpp)
+target_link_libraries(TinyBench PRIVATE TinyEmbreeCore)
+set_target_properties(TinyBench
+    PROPERTIES
+        CXX_STANDARD 11
+        CXX_STANDARD_REQUIRED YES
+        CXX_EXTENSIONS NO
+)
