--- a/External/CMakeLists.txt
+++ b/External/CMakeLists.txt
@@ -9,7 +9,7 @@ set(EMBREE_GEOMETRY_CURVE         OFF CACHE BOOL " " FORCE)
 set(EMBREE_GEOMETRY_GRID          OFF CACHE BOOL " " FORCE)
 set(EMBREE_GEOMETRY_SUBDIVISION   OFF CACHE BOOL " " FORCE)
 set(EMBREE_GEOMETRY_INSTANCE      OFF CACHE BOOL " " FORCE)
-set(EMBREE_GEOMETRY_USER          OFF CACHE BOOL " " FORCE)
+set(EMBREE_GEOMETRY_USER          ON  CACHE BOOL " " FORCE)
 
 # We don't bother compiling and linking TBB
 set(EMBREE_TASKING_SYSTEM         "INTERNAL" CACHE STRING " " FORCE)
