--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -73,7 +73,7 @@ jobs:
         path: ${{github.workspace}}/TinyEmbree/bin/**/*.nupkg
 
     - name: Publish on version change
-      uses: rohith/publish-nuget@v2
+      uses: alirezanet/publish-nuget@v3.0.4
       with:
         PROJECT_FILE_PATH: TinyEmbree/TinyEmbree.csproj
         NUGET_KEY: ${{secrets.NUGET_API_KEY}}
