building and stuff

--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,8 @@ bin
 obj
 
 # Compiled shared libraries
-/Runtimes/*
-/Prebuilt/*
+/runtimes/*
+/prebuilt/*
 
 # Extracted test meshes (we only commit the .zip archives)
 Data/*
