--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,24 +11,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-      with:
-        submodules: recursive
-
-    - name: Create Build Environment
-      run: cmake -E make_directory ${{github.workspace}}/build
-
-    - name: Configure CMake
-      working-directory: ${{github.workspace}}/build
-      run: cmake ${{github.workspace}} -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=${{github.workspace}}/Runtimes
-
-    - name: Build
-      working-directory: ${{github.workspace}}/build
-      run: cmake --build . --config Release
-
-    - name: Upload Binaries
-      uses: actions/upload-artifact@v2
-      with:
-        path: ${{github.workspace}}/Runtimes/*
 
     - name: Setup .NET Core SDK
       uses: actions/setup-dotnet@v1.7.2
@@ -39,9 +21,15 @@ jobs:
     - name: Clean
       run: dotnet clean -c Release && dotnet nuget locals all --clear
 
-    - name: Test
+    - name: Build
       working-directory: ${{github.workspace}}
-      run: dotnet test
+      run: ./make.ps1
+      shell: pwsh
+
+    - name: Upload Binaries
+      uses: actions/upload-artifact@v2
+      with:
+        path: ${{github.workspace}}/runtimes/*
 
   pack:
     runs-on: ubuntu-latest
@@ -53,7 +41,7 @@ jobs:
     - uses: actions/download-artifact@v2
       with:
         name: artifact
-        path: ${{github.workspace}}/Runtimes
+        path: ${{github.workspace}}/runtimes
 
     - name: Setup .NET Core SDK
       uses: actions/setup-dotnet@v1.7.2
