--- a/TinyEmbree/TinyEmbree.csproj
+++ b/TinyEmbree/TinyEmbree.csproj
@@ -16,7 +16,7 @@
 
     <TargetFramework>net5.0</TargetFramework>
     <!-- Each additional platform requires an entry here, once the native binaries have been added below -->
-    <RuntimeIdentifiers>win10-x64;linux-x64;osx-x64</RuntimeIdentifiers>
+    <RuntimeIdentifiers>win10-x64;linux-x64;osx-x64;osx-arm64</RuntimeIdentifiers>
 
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
@@ -24,17 +24,11 @@
 
   <!-- Each additional platform requires an entry here, to copy the corresponding native binaries -->
   <ItemGroup>
-    <Content CopyToOutputDirectory="Always" Include="../Runtimes/TinyEmbreeCore.dll" Pack="true" PackagePath="runtimes/win-x64/native/" Condition="Exists('../Runtimes/TinyEmbreeCore.dll')" />
-    <Content CopyToOutputDirectory="Always" Include="../Runtimes/embree3.dll" Pack="true" PackagePath="runtimes/win-x64/native/" Condition="Exists('../Runtimes/embree3.dll')" />
-    <Content CopyToOutputDirectory="Always" Include="../Runtimes/tbb12.dll" Pack="true" PackagePath="runtimes/win-x64/native/" Condition="Exists('../Runtimes/tbb12.dll')" />
-
-    <Content CopyToOutputDirectory="Always" Include="../Runtimes/libTinyEmbreeCore.so" Pack="true" PackagePath="runtimes/linux-x64/native/" Condition="Exists('../Runtimes/libTinyEmbreeCore.so')" />
-    <Content CopyToOutputDirectory="Always" Include="../Runtimes/libembree3.so.3" Pack="true" PackagePath="runtimes/linux-x64/native/" Condition="Exists('../Runtimes/libembree3.so.3')" />
-    <Content CopyToOutputDirectory="Always" Include="../Runtimes/libtbb.so.12" Pack="true" PackagePath="runtimes/linux-x64/native/" Condition="Exists('../Runtimes/libtbb.so.12')" />
-
-    <Content CopyToOutputDirectory="Always" Include="../Runtimes/libTinyEmbreeCore.dylib" Pack="true" PackagePath="runtimes/osx-x64/native/" Condition="Exists('../Runtimes/libTinyEmbreeCore.dylib')" />
-    <Content CopyToOutputDirectory="Always" Include="../Runtimes/libembree3.3.dylib" Pack="true" PackagePath="runtimes/osx-x64/native/" Condition="Exists('../Runtimes/libembree3.3.dylib')" />
-    <Content CopyToOutputDirectory="Always" Include="../Runtimes/libtbb12.dylib" Pack="true" PackagePath="runtimes/osx-x64/native/" Condition="Exists('../Runtimes/libtbb12.dylib')" />
+    <Content CopyToOutputDirectory="Always" Include="../runtimes/**" Pack="true" PackagePath="runtimes/" />
+    <Content CopyToOutputDirectory="Always" Include="../runtimes/win-x64/native/**" Pack="false" />
+    <Content CopyToOutputDirectory="Always" Include="../runtimes/linux-x64/native/**" Pack="false" />
+    <Content CopyToOutputDirectory="Always" Include="../runtimes/osx-x64/native/**" Pack="false" />
+    <Content CopyToOutputDirectory="Always" Include="../runtimes/osx-arm64/native/**" Pack="false" />
   </ItemGroup>
 
   <ItemGroup>
