--- a/TinyEmbree/TinyEmbree.csproj
+++ b/TinyEmbree/TinyEmbree.csproj
@@ -24,11 +24,18 @@
 
   <!-- Each additional platform requires an entry here, to copy the corresponding native binaries -->
   <ItemGroup>
+    <!-- Copy to the intended location for the nuget package -->
     <Content CopyToOutputDirectory="Always" Include="../runtimes/**" Pack="true" PackagePath="runtimes/" />
-    <Content CopyToOutputDirectory="Always" Include="../runtimes/win-x64/native/**" Pack="false" />
-    <Content CopyToOutputDirectory="Always" Include="../runtimes/linux-x64/native/**" Pack="false" />
-    <Content CopyToOutputDirectory="Always" Include="../runtimes/osx-x64/native/**" Pack="false" />
-    <!-- <Content CopyToOutputDirectory="Always" Include="../runtimes/osx-arm64/native/**" Pack="false" /> -->
+
+    <!-- Copy the native libs to the output directory so it will be found during debugging -->
+    <Content CopyToOutputDirectory="Always" Include="../runtimes/win-x64/native/**" Pack="false"
+      Condition=" $([MSBuild]::IsOsPlatform('Windows')) AND '$([System.Runtime.InteropServices.RuntimeInformation]::OSArchitecture)' == 'X64' "/>
+    <Content CopyToOutputDirectory="Always" Include="../runtimes/linux-x64/native/**" Pack="false"
+      Condition=" $([MSBuild]::IsOsPlatform('Linux')) AND '$([System.Runtime.InteropServices.RuntimeInformation]::OSArchitecture)' == 'X64' "/>
+    <Content CopyToOutputDirectory="Always" Include="../runtimes/osx-x64/native/**" Pack="false"
+      Condition=" $([MSBuild]::IsOsPlatform('OSX')) AND '$([System.Runtime.InteropServices.RuntimeInformation]::OSArchitecture)' == 'X64' "/>
+    <Content CopyToOutputDirectory="Always" Include="../runtimes/osx-arm64/native/**" Pack="false"
+      Condition=" $([MSBuild]::IsOsPlatform('OSX')) AND '$([System.Runtime.InteropServices.RuntimeInformation]::OSArchitecture)' == 'Arm64' "/>
   </ItemGroup>
 
   <ItemGroup>
