--- a/TinyEmbree/TinyEmbree.csproj
+++ b/TinyEmbree/TinyEmbree.csproj
@@ -25,16 +25,16 @@
   <!-- Each additional platform requires an entry here, to copy the corresponding native binaries -->
   <ItemGroup>
     <!-- Copy to the intended location for the nuget package -->
-    <Content CopyToOutputDirectory="Always" Include="../runtimes/**" Pack="true" PackagePath="runtimes/" />
+    <Content CopyToOutputDirectory="Never" Include="../runtimes/**" Pack="true" PackagePath="runtimes/" />
 
     <!-- Copy the native libs to the output directory so it will be found during debugging -->
-    <Content CopyToOutputDirectory="Always" Include="../runtimes/win-x64/native/**" Pack="false"
+    <None CopyToOutputDirectory="Always" Include="../runtimes/win-x64/native/**"
       Condition=" $([MSBuild]::IsOsPlatform('Windows')) AND '$([System.Runtime.InteropServices.RuntimeInformation]::OSArchitecture)' == 'X64' "/>
-    <Content CopyToOutputDirectory="Always" Include="../runtimes/linux-x64/native/**" Pack="false"
+    <None CopyToOutputDirectory="Always" Include="../runtimes/linux-x64/native/**"
       Condition=" $([MSBuild]::IsOsPlatform('Linux')) AND '$([System.Runtime.InteropServices.RuntimeInformation]::OSArchitecture)' == 'X64' "/>
-    <Content CopyToOutputDirectory="Always" Include="../runtimes/osx-x64/native/**" Pack="false"
+    <None CopyToOutputDirectory="Always" Include="../runtimes/osx-x64/native/**"
       Condition=" $([MSBuild]::IsOsPlatform('OSX')) AND '$([System.Runtime.InteropServices.RuntimeInformation]::OSArchitecture)' == 'X64' "/>
-    <Content CopyToOutputDirectory="Always" Include="../runtimes/osx-arm64/native/**" Pack="false"
+    <None CopyToOutputDirectory="Always" Include="../runtimes/osx-arm64/native/**"
       Condition=" $([MSBuild]::IsOsPlatform('OSX')) AND '$([System.Runtime.InteropServices.RuntimeInformation]::OSArchitecture)' == 'Arm64' "/>
   </ItemGroup>
 
